# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out  author  ft_check.c  ft_controller.c  ft_convert16.c  ft_create_list_var.c  ft_crtflgs.c  ft_get_c.c  ft_get_d.c  ft_get_f.c  ft_get_o.c  ft_get_p.c  ft_get_s.c  ft_get_u.c  ft_get_x.c  ft_itoa_base.c  ft_llitoa.c  ft_my_strjoin.c  ft_ntlstn.c  ft_print_X.c  ft_print_c.c  ft_print_d.c  ft_print_d1.c  ft_print_d_ngtv_rgsgn_prcsn_1.c  ft_print_d_ngtv_rgsgn_prcsn_z.c  ft_print_d_pstv_rgsgn_prcsn_1.c  ft_print_d_pstv_rgsgn_prcsn_z.c  ft_print_d_rgsgn.c  ft_print_f.c  ft_print_f1.c  ft_print_o.c  ft_print_p.c  ft_print_pc.c  ft_print_s.c  ft_print_u.c  ft_printf.c  ft_printf.h  (+9 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/: Makefile  ft_atoi.c  ft_strchr.c  ft_strdel.c  ft_strjoin.c  ft_strlen.c  ft_strnew.c  libft.h
