cmake_minimum_required(VERSION 3.14)
project(ft_printf C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)

add_executable(ft_printf
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_free_lst_mem.c
        libft/ft_free_matrix_mem.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstaddback.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putlst.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strcdel.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        ft_check.c
        ft_controller.c
        ft_create_list_var.c
        ft_crtflgs.c
        ft_get_c.c
        ft_get_d.c
        ft_get_f.c
        ft_get_o.c
        ft_get_p.c
        ft_get_u.c
        ft_get_x.c
        ft_itoa_base.c
        ft_llitoa.c
        ft_my_strjoin.c
        ft_ntlstn.c
        ft_print_c.c
        ft_print_d.c
        ft_print_d_ngtv_rgsgn_prcsn_1.c
        ft_print_d_ngtv_rgsgn_prcsn_z.c
        ft_print_d_pstv_rgsgn_prcsn_1.c
        ft_print_d_pstv_rgsgn_prcsn_z.c
        ft_print_f.c
        ft_print_o.c
        ft_print_p.c
        ft_print_pc.c
        ft_print_s.c
        ft_print_u.c
        ft_print_x.c
        ft_printf.c
        ft_printf.h
        ft_start_double.c
        ft_strjoin_char.c
        ft_strjoin_lr.c
        ft_uitoa_base.c
        ft_ullitoa.c
        main.c)
